# E.L.L.I.E

./: Cargo.toml  camray.py  discord_token.json  response.json  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/android_ellie/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/android_ellie/: MainActivity.kt
app/src/main/java/com/example/android_ellie/server/: DeviceHttpServer.kt  DeviceModels.kt  DeviceStateCollector.kt  EllieAccessibilityService.kt  EllieNotificationListenerService.kt  ServerViewModel.kt
app/src/main/java/com/example/android_ellie/ui/: EllieApp.kt
app/src/main/java/com/example/android_ellie/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/test/java/com/example/android_ellie/: ExampleUnitTest.kt
backend/: .env  camera_manager.py  capture_calib.py  main.py  reference_registry.json  response.yaml  room_3d.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ActionList.tsx  Badge.tsx  IconButton.tsx  LogView.tsx  PanelCard.tsx  StatusList.tsx
frontend/src/data/: phoneStateSections.json  remoteStateSections.json
frontend/src/lib/: api.ts  storage.ts  utils.ts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: discord.rs  handlers.rs  main.rs  models.rs  snapshot.rs  state.rs  token.rs
