# Cargo.toml
[package]
name = "pc_elie"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38"
wmi = "0.18"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
discord-rich-presence = "1.1"
once_cell = "1"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
urlencoding = "2"
tower-http = {version="0.6.8", features=["cors"]}